# churnguard-ds

./: .gitignore  LICENSE  README.md  pyproject.toml
churnguard_data/: README.md
churnguard_ds/: __init__.py  cli.py  dataset.py  metrics.py  model.py  pipeline.py  preprocessing.py
churnguard_examples/: customer.json
docs/: CHURN_CV_BULLETS.md
tests/: test_churnguard.py
