[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "churnguard-ds"
version = "0.1.0"
description = "Portfolio-ready customer churn prediction project with explainable scoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
churnguard = "churnguard_ds.cli:main"

[tool.setuptools]
packages = ["churnguard_ds"]

